# serializer version: 1
# name: test_create
  dict({
    'count': None,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 1,
      'name': 'palm.fa.gz',
    }),
    'files': list([
    ]),
    'gc': None,
    'id': 'abc123',
    'job': None,
    'linked_samples': list([
    ]),
    'name': 'Calamus',
    'nickname': 'Rim Palm',
    'ready': False,
    'user': dict({
      'handle': 'bob',
      'id': 'fb085f7f',
    }),
  })
# ---
# name: test_create[job]
  dict({
    '_id': 'bf1b993c',
    'acquired': False,
    'archived': False,
    'args': dict({
      'files': list([
        dict({
          'id': 1,
          'name': 'palm.fa.gz',
        }),
      ]),
      'subtraction_id': 'abc123',
    }),
    'key': None,
    'ping': None,
    'rights': dict({
    }),
    'space': dict({
      'id': 0,
    }),
    'state': 'waiting',
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'id': 'fb085f7f',
    }),
    'workflow': 'create_subtraction',
  })
# ---
# name: test_edit[False-False-data0]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': None,
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[False-False-data0].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[False-False-data1]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': None,
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[False-False-data1].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[False-False-data2]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': None,
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[False-False-data2].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[False-False-data3]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': None,
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[False-False-data3].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[False-True-data0]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': None,
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[False-True-data0].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[False-True-data1]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': None,
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[False-True-data1].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[False-True-data2]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': None,
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[False-True-data2].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[False-True-data3]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': None,
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[False-True-data3].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[True-False-data0]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': dict({
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 10,
      'stage': 'NzFJEUSgqMReEKilxKJT',
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'jobs_pathoscope_bowtie',
    }),
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[True-False-data0].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[True-False-data1]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': dict({
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 10,
      'stage': 'NzFJEUSgqMReEKilxKJT',
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'jobs_pathoscope_bowtie',
    }),
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[True-False-data1].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[True-False-data2]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': dict({
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 10,
      'stage': 'NzFJEUSgqMReEKilxKJT',
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'jobs_pathoscope_bowtie',
    }),
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[True-False-data2].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[True-False-data3]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': dict({
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 10,
      'stage': 'NzFJEUSgqMReEKilxKJT',
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'jobs_pathoscope_bowtie',
    }),
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[True-False-data3].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': None,
  })
# ---
# name: test_edit[True-True-data0]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': dict({
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 10,
      'stage': 'NzFJEUSgqMReEKilxKJT',
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'jobs_pathoscope_bowtie',
    }),
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[True-True-data0].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'name': 'Bar',
    'nickname': 'Apple',
    'ready': True,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[True-True-data1]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': dict({
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 10,
      'stage': 'NzFJEUSgqMReEKilxKJT',
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'jobs_pathoscope_bowtie',
    }),
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[True-True-data1].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'name': 'Malus domestica',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[True-True-data2]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': dict({
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 10,
      'stage': 'NzFJEUSgqMReEKilxKJT',
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'jobs_pathoscope_bowtie',
    }),
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[True-True-data2].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'name': 'Malus domestica',
    'nickname': '',
    'ready': True,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[True-True-data3]
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': dict({
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 10,
      'stage': 'NzFJEUSgqMReEKilxKJT',
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'jobs_pathoscope_bowtie',
    }),
    'linked_samples': list([
      dict({
        'id': '12',
        'name': 'Sample 12',
      }),
      dict({
        'id': '22',
        'name': 'Sample 22',
      }),
    ]),
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_edit[True-True-data3].1
  dict({
    '_id': 'apple',
    'count': 11,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'name': 'Bar',
    'nickname': 'Bar Subtraction',
    'ready': True,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_finalize[None]
  dict({
    'count': 100,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
      dict({
        'download_url': '/subtractions/foo/files/subtraction.fq.gz',
        'id': 1,
        'name': 'subtraction.fq.gz',
        'size': 12345,
        'subtraction': 'foo',
        'type': 'fasta',
      }),
      dict({
        'download_url': '/subtractions/foo/files/subtraction.1.bt2',
        'id': 2,
        'name': 'subtraction.1.bt2',
        'size': 56437,
        'subtraction': 'foo',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/subtractions/foo/files/subtraction.2.bt2',
        'id': 3,
        'name': 'subtraction.2.bt2',
        'size': 93845,
        'subtraction': 'foo',
        'type': 'bowtie2',
      }),
    ]),
    'gc': dict({
      'a': 0.319,
      'c': 0.18,
      'g': 0.18,
      'n': 0.002,
      't': 0.319,
    }),
    'id': 'foo',
    'job': dict({
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 10,
      'stage': 'NzFJEUSgqMReEKilxKJT',
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'jobs_pathoscope_bowtie',
    }),
    'linked_samples': list([
    ]),
    'name': 'Foo',
    'nickname': 'Foo Subtraction',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_finalize[None].1
  dict({
    '_id': 'foo',
    'count': 100,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'gc': dict({
      'a': 0.319,
      'c': 0.18,
      'g': 0.18,
      'n': 0.002,
      't': 0.319,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'name': 'Foo',
    'nickname': 'Foo Subtraction',
    'ready': True,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_find[2-1]
  dict({
    'documents': list([
      dict({
        'count': None,
        'created_at': '2015-10-06T20:00:00Z',
        'file': dict({
          'id': 642,
          'name': 'Apis_mellifera.0.fa.gz',
        }),
        'id': 'id_0',
        'job': dict({
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': '7cf872dc',
          'progress': 10,
          'stage': 'NzFJEUSgqMReEKilxKJT',
          'state': 'preparing',
          'user': dict({
            'handle': 'leeashley',
            'id': 'fb085f7f',
          }),
          'workflow': 'jobs_pathoscope_bowtie',
        }),
        'name': 'Test 0',
        'nickname': '',
        'ready': True,
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
      dict({
        'count': None,
        'created_at': '2015-10-06T20:00:00Z',
        'file': dict({
          'id': 642,
          'name': 'Apis_mellifera.1.fa.gz',
        }),
        'id': 'id_1',
        'job': dict({
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': '7cf872dc',
          'progress': 10,
          'stage': 'NzFJEUSgqMReEKilxKJT',
          'state': 'preparing',
          'user': dict({
            'handle': 'leeashley',
            'id': 'fb085f7f',
          }),
          'workflow': 'jobs_pathoscope_bowtie',
        }),
        'name': 'Test 1',
        'nickname': '',
        'ready': True,
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
    ]),
    'found_count': 5,
    'page': 1,
    'page_count': 3,
    'per_page': 2,
    'ready_count': 5,
    'total_count': 5,
  })
# ---
# name: test_find[2-2]
  dict({
    'documents': list([
      dict({
        'count': None,
        'created_at': '2015-10-06T20:00:00Z',
        'file': dict({
          'id': 642,
          'name': 'Apis_mellifera.2.fa.gz',
        }),
        'id': 'id_2',
        'job': dict({
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': '7cf872dc',
          'progress': 10,
          'stage': 'NzFJEUSgqMReEKilxKJT',
          'state': 'preparing',
          'user': dict({
            'handle': 'leeashley',
            'id': 'fb085f7f',
          }),
          'workflow': 'jobs_pathoscope_bowtie',
        }),
        'name': 'Test 2',
        'nickname': '',
        'ready': True,
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
      dict({
        'count': None,
        'created_at': '2015-10-06T20:00:00Z',
        'file': dict({
          'id': 642,
          'name': 'Apis_mellifera.3.fa.gz',
        }),
        'id': 'id_3',
        'job': dict({
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': '7cf872dc',
          'progress': 10,
          'stage': 'NzFJEUSgqMReEKilxKJT',
          'state': 'preparing',
          'user': dict({
            'handle': 'leeashley',
            'id': 'fb085f7f',
          }),
          'workflow': 'jobs_pathoscope_bowtie',
        }),
        'name': 'Test 3',
        'nickname': '',
        'ready': True,
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
    ]),
    'found_count': 5,
    'page': 2,
    'page_count': 3,
    'per_page': 2,
    'ready_count': 5,
    'total_count': 5,
  })
# ---
# name: test_find[None-None]
  dict({
    'documents': list([
      dict({
        'count': None,
        'created_at': '2015-10-06T20:00:00Z',
        'file': dict({
          'id': 642,
          'name': 'Apis_mellifera.0.fa.gz',
        }),
        'id': 'id_0',
        'job': dict({
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': '7cf872dc',
          'progress': 10,
          'stage': 'NzFJEUSgqMReEKilxKJT',
          'state': 'preparing',
          'user': dict({
            'handle': 'leeashley',
            'id': 'fb085f7f',
          }),
          'workflow': 'jobs_pathoscope_bowtie',
        }),
        'name': 'Test 0',
        'nickname': '',
        'ready': True,
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
      dict({
        'count': None,
        'created_at': '2015-10-06T20:00:00Z',
        'file': dict({
          'id': 642,
          'name': 'Apis_mellifera.1.fa.gz',
        }),
        'id': 'id_1',
        'job': dict({
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': '7cf872dc',
          'progress': 10,
          'stage': 'NzFJEUSgqMReEKilxKJT',
          'state': 'preparing',
          'user': dict({
            'handle': 'leeashley',
            'id': 'fb085f7f',
          }),
          'workflow': 'jobs_pathoscope_bowtie',
        }),
        'name': 'Test 1',
        'nickname': '',
        'ready': True,
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
      dict({
        'count': None,
        'created_at': '2015-10-06T20:00:00Z',
        'file': dict({
          'id': 642,
          'name': 'Apis_mellifera.2.fa.gz',
        }),
        'id': 'id_2',
        'job': dict({
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': '7cf872dc',
          'progress': 10,
          'stage': 'NzFJEUSgqMReEKilxKJT',
          'state': 'preparing',
          'user': dict({
            'handle': 'leeashley',
            'id': 'fb085f7f',
          }),
          'workflow': 'jobs_pathoscope_bowtie',
        }),
        'name': 'Test 2',
        'nickname': '',
        'ready': True,
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
      dict({
        'count': None,
        'created_at': '2015-10-06T20:00:00Z',
        'file': dict({
          'id': 642,
          'name': 'Apis_mellifera.3.fa.gz',
        }),
        'id': 'id_3',
        'job': dict({
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': '7cf872dc',
          'progress': 10,
          'stage': 'NzFJEUSgqMReEKilxKJT',
          'state': 'preparing',
          'user': dict({
            'handle': 'leeashley',
            'id': 'fb085f7f',
          }),
          'workflow': 'jobs_pathoscope_bowtie',
        }),
        'name': 'Test 3',
        'nickname': '',
        'ready': True,
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
      dict({
        'count': None,
        'created_at': '2015-10-06T20:00:00Z',
        'file': dict({
          'id': 642,
          'name': 'Apis_mellifera.4.fa.gz',
        }),
        'id': 'id_4',
        'job': dict({
          'archived': False,
          'created_at': '2015-10-06T20:00:00Z',
          'id': '7cf872dc',
          'progress': 10,
          'stage': 'NzFJEUSgqMReEKilxKJT',
          'state': 'preparing',
          'user': dict({
            'handle': 'leeashley',
            'id': 'fb085f7f',
          }),
          'workflow': 'jobs_pathoscope_bowtie',
        }),
        'name': 'Test 4',
        'nickname': '',
        'ready': True,
        'user': dict({
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
    ]),
    'found_count': 5,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'ready_count': 5,
    'total_count': 5,
  })
# ---
# name: test_find_empty_subtractions
  dict({
    'documents': list([
    ]),
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'ready_count': 0,
    'total_count': 0,
  })
# ---
# name: test_get
  dict({
    'count': 11,
    'created_at': '2015-10-06T20:00:00Z',
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.21,
      'c': 0.29,
      'g': 0.19,
      'n': 0.2,
      't': 0.26,
    }),
    'id': 'apple',
    'job': dict({
      'archived': False,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'fb085f7f',
      'progress': 10,
      'stage': 'NzFJEUSgqMReEKilxKJT',
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'jobs_pathoscope_bowtie',
    }),
    'linked_samples': list([
    ]),
    'name': 'Malus domestica',
    'nickname': 'Apple',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_get_from_job
  dict({
    'count': 1,
    'created_at': '2024-05-27T21:44:47.261000Z',
    'file': dict({
      'id': 1,
      'name': 'foobar.fq.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': 'foobar',
    'job': dict({
      'archived': False,
      'created_at': '2024-05-27T21:44:47.261000Z',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
    ]),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_job_remove[True-False]
  dict({
    '_id': 'foo',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'deleted': True,
    'file': dict({
      'id': 642,
      'name': 'Apis_mellifera.1.fa.gz',
    }),
    'job': dict({
      'job': 'fb085f7f',
    }),
    'name': 'Foo',
    'nickname': 'Foo Subtraction',
    'ready': False,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_job_remove[True-False].1
  dict({
    '_id': 'test',
    'name': 'Test',
    'subtractions': list([
    ]),
  })
# ---
# name: test_upload[None]
  dict({
    'download_url': '/subtractions/foo/files/subtraction.1.bt2',
    'id': 1,
    'name': 'subtraction.1.bt2',
    'size': 12,
    'subtraction': 'foo',
    'type': 'bowtie2',
  })
# ---
